--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -797,6 +797,21 @@ NAPTでは、送信元IPアドレスについてプライベートIPアドレス
 
 ---
 
+## 秘密保持契約 【 NDA (Non-Disclosure Agreement) 】
+
+wiki
+>秘密保持契約（ひみつほじけいやく、（英: non-disclosure agreement、略称: NDA）とは、ある取引を行う際などに、人の間 [^1]で締結する、営業秘密や個人情報など業務に関して知った秘密[^2]を第三者[^3]に開示しない[^4]とする契約。  
+>機密保持契約、守秘義務契約ともいう。  
+>非開示契約とも訳されるが、これは特に、必ずしも本来の秘密でない情報も対象とする場合に用いられる。  
+>一般に、被雇用者には業務上知り得た情報について守秘義務が課されると解されているが、雇用契約の際に雇用契約書内に守秘義務規定を明記しておく、または別に守秘義務の履行を確約させる目的で誓約書を取り交わす場合もある。  
+>
+>[^1]: 法人や自然人  
+>[^2]: すでに公開済みのものや独自にないし別ソースから入手されたものなどを除外することが多い。  
+>[^3]: 当該取引に関連する関連会社や弁護士、公認会計士などを除外することが多い。  
+>[^4]: 行政庁や裁判所の要求する場合、その他法律上開示義務がある場合などが除外されることが多い。  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
