整理、疑問追加

--- a/DB・SQL/データベースメモ.md
+++ b/DB・SQL/データベースメモ.md
@@ -82,7 +82,7 @@ DB上で扱うデータの重複を排除し、「矛盾」の発生を「設計
 <https://urashita.com/archives/33098>
 
 **可能**  
-萬君に質問されたので、知識を確かなものにするためにまとめ。  
+Yr君に質問されたので、知識を確かなものにするためにまとめ。  
 Teelaか何かでやったことがあるような気がしたが、まとめていなかったので自信を持って答えられなかったのでまとめ。  
 
 <https://atmarkit.itmedia.co.jp/bbs/phpBB/viewtopic.php?topic=45369&forum=26>  
