--- a/Programming/プログラミングに関するメモ.md
+++ b/Programming/プログラミングに関するメモ.md
@@ -281,7 +281,7 @@ var test = function() {}
 セマフォを資源を使っているかどうか、その状態を表す信号機のようなものだと認識していたが、  
 本来は並列処理がメインの概念みたいだ。  
 
-萬君からセマフォって何？って聞かれたのと、「セマフォがタイムアウトしました。」ってエラーを見せられたので、調べてみた次第です。  
+Yr君からセマフォって何？って聞かれたのと、「セマフォがタイムアウトしました。」ってエラーを見せられたので、調べてみた次第です。  
 ドンピシャな回答があったので乗せておく。  
 「tcp プロバイダー セマフォがタイムアウトしました。」  
 <https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q14134357014>  
