--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -39,7 +39,7 @@ PCに周辺機器や拡張カード等を接続した際にハードウェアと
 
 ## システムドライブ
 
-東さんが「システムドライブにSATAを使うのはどうなんだ？」みたいなこと言ってたのでまとめ。  
+Azさんが「システムドライブにSATAを使うのはどうなんだ？」みたいなこと言ってたのでまとめ。  
 
 ``` txt : 一番上に出てくる説明<http://koyocha.blog.fc2.com/blog-entry-29.html>
 オペレーティングシステムがインストールされているハードディスクドライブのこと。
@@ -810,6 +810,8 @@ wiki
 >[^3]: 当該取引に関連する関連会社や弁護士、公認会計士などを除外することが多い。  
 >[^4]: 行政庁や裁判所の要求する場合、その他法律上開示義務がある場合などが除外されることが多い。  
 
+実務のコードをGitHubとかに挙げて公開するのは駄目だよって話。  
+
 ---
 
 ## 雑記
@@ -848,6 +850,11 @@ gc.collect
 
 [ストップforeach！LINQで集合/結合する](https://qiita.com/i-tanaka730/items/3e6b560e80f1395ae8ea)  
 
+条件を絞ってからJoin Joinしてから条件を絞る
+[](https://atmarkit.itmedia.co.jp/bbs/phpBB/viewtopic.php?topic=32176&forum=26)  
+lru cache implementation c#
+[Fast, Short And Clean O1 LRU Cache Algorithm Implementation In C#](https://www.c-sharpcorner.com/article/fast-and-clean-o1-lru-cache-implementation/)  
+
 最初の実行から条件が駄目なので実行はされない。
 
 ``` C#
@@ -855,3 +862,43 @@ for (int i = 1 ; i < 0 ; i++) {
     _ = 1;
 }
 ```
+
+メガネがないと目が疲れる。
+仕事に支障が出るレベルだな。
+まさかナチュラルに忘れるとは。
+
+まだまだ基礎がおろそか。
+
+決定的な何かがないからまだ決断できない。
+ただ、できることはやっていこう。
+本番の情報を使ってしまっているのに躊躇している。
+新しくブランチを切りなおして、整理したほうがいいだろう。
+俺のメインブランチはこれしかないからな。
+それくらいの苦労だったらいくらでもやってやる。
+
+ずっとここにいるつもりはない。それは確かだ。
+やりたいことなんてないからできることから探すしかなかろう。
+相手だって、それくらいのことはわかるはずだ。
+
+てか、そもそも俺の居場所なんてここにないでしょ。
+6年目になる前にいなくなるって決めたのは自分だぞ。
+何をいまさら。
+不安要素をピックアップしてそれをつぶして動いていくしかあるまい。
+そうやって一つずつ進むしかない。
+
+
+目の前にわからないことが転がっている状況で活動したくないと思っている可能性。
+だってわからないことがあるんだからね。
+で、目の前の疑問を解決する作業が楽しすぎる。
+転職活動したら確実にできなくなると思っているので、躊躇しているのかもしれない。
+
+プライベートリポジトリを見せることができるのか？
+パブリックに公開できるようにする。
+○○さんをすべてイニシャルに書き換える。
+新しくtilを作る。目的は整備。
+
+
+ようやっと考えを先に進めることができたかもしれない。
+やっぱり、ある程度のきっかけは欲しいね。
+自分で用意できれば最強だけど、自分でできないときは、他人に手伝ってもらうのも一つの手であり、問題解決の手段としては優秀である。
+
