--- a/Math/とりあえず.md
+++ b/Math/とりあえず.md
@@ -1,7 +1,7 @@
 # 数学
 
 不等式にマイナスを掛けた場合、記号は逆転するか？  
-萬君から質問されたがすぐにわからなかった。  
+Yr君から質問されたがすぐにわからなかった。  
 適当に回答したが、間違っていたのでとてもショックを受けた。  
 数学を学び直したいと思ったので、Mathチャンネルを作る。  
 
