・IDENTITY INSERT ・LRU概要 ・整理

--- a/AppliedInformation/午後/H27S.md
+++ b/AppliedInformation/午後/H27S.md
@@ -13,7 +13,7 @@ SPF,ハッシュ,改ざんなどのキーワードもしっかり抑えている
 ・不審なメールが届いた人に指示する内容とは？  
 →不審なメールの削除  
 受信したところで念のためシステムチェックやウイルス対策ソフトによるチェック等も考えたけど、単純に消すだけでよかったか。  
-というか、自分も小山さんからのメールが届いたら即ゴミ箱に入れてるしな。  
+というか、自分もkymさんからのメールが届いたら即ゴミ箱に入れてるしな。  
 
 ``` txt : 23分 7/8
 イ
