--- a/BasicInformation/午前/3.ストラテジ系/1.システム戦略.md
+++ b/BasicInformation/午前/3.ストラテジ系/1.システム戦略.md
@@ -348,7 +348,7 @@ SOAを実現する手段として、WebサービスやESB(Enterprise service bus
 ### マイクロサービス
 
 応用情報とは直接関係ない。  
-福田さんが発したのでまとめ。  
+fkdさんが発したのでまとめ。  
 これくらいの単語なら既にまとめているようなモノだと思っていたが、意外とまとめていなかった。  
 
 なんてことはない、SOAの概念の1部みたいだ。  
