--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -988,8 +988,8 @@ Task.Factory.StartNewが不要になったわけではない。
 
 ## AsyncをAwaitするのと同期は同じか？
 
-居林さんからAsyncをAwaitするのと、普通の同期処理は同じか？という質問を受けた。  
-居林さんは毎回いい質問を持ってきてくれる。  
+ibさんからAsyncをAwaitするのと、普通の同期処理は同じか？という質問を受けた。  
+ibさんは毎回いい質問を持ってきてくれる。  
 厳密には違うだろうが、どう違うのか、考えてみればわからないのでまとめることにした。  
 
 同期処理における時間のかかる処理は白くなって動かせなくなる。  
