--- a/English/文法.md
+++ b/English/文法.md
@@ -4,7 +4,7 @@
 
 [-ee（される人）と-er（する人）の使い方](https://talking-english.net/ee-er/)  
 
-東さんから「される人」って何ていうの？って質問されて、負傷者は「Injured」っていうくらいだから過去形じゃない？って返したけど、
+azmさんから「される人」って何ていうの？って質問されて、負傷者は「Injured」っていうくらいだから過去形じゃない？って返したけど、
 違ったみたいで、それなら自分で調べろやって思ったけど、間違っていたことは単純にありがたかったのでまとめることにした。  
 
 動詞が名詞になる場合には単語の後ろにeeがついて「動作をされる側の人」、er / or が「動作をする側の人」を指すことが多いです。  
