--- a/Other/業務用語など.md
+++ b/Other/業務用語など.md
@@ -113,7 +113,7 @@
 >4人の食事代金が2,000円で、取り皿に盛った回数がAさん1回、Bさん1回、Cさん2回、Dさん1回である場合、取り皿に盛った回数を基準として按分計算を行うと、Aさんが400円、Bさんが400円、Cさんは800円、Dさんが400円支払うことになります。  
 >単純に割り勘で支払うよりも、実情に近い支払いができます。  
 
-福田さん曰く  
+fkdさん曰く  
 100%仕事用に軽トラ買った。  
 でも50%、遊びに使ってしまった。  
 そしたら50%分を割り返して、その分の税金を収めるみたいな感じで使うらしい。  
