--- a/Programming/コーディング規約.md
+++ b/Programming/コーディング規約.md
@@ -7,7 +7,7 @@
 
 ## フラグ引数
 
-笹田さんに説明する時、なぜだめなのか？をうまく説明できなかったのでまとめ。  
+ssdさんに説明する時、なぜだめなのか？をうまく説明できなかったのでまとめ。  
 大切なのは以下の2つに感じた。  
 
 ・関数は1つのことをすべきという原則を破ることになるから  
