--- a/Programming/プログラミングに関するメモ.md
+++ b/Programming/プログラミングに関するメモ.md
@@ -79,7 +79,7 @@ null安全とは 実行時にnullが原因のエラー（NullPointerException）
 SwiftやKotlinなど比較的新しい言語では積極的に取り入れられています。  
 ```
 
-チェックアウトのことで福田さんと話している時に、なぜわざわざnewだけして返却しているのか聞いた時の話。  
+チェックアウトのことでfkdさんと話している時に、なぜわざわざnewだけして返却しているのか聞いた時の話。  
 曰く「nullsafeのため」ということだったので、まとめることにした。  
 
 nullで返却してもいいけども、返却した先でnullチェックしてなかったらエラーになってしまうだろうから、それならオブジェクトを代入して返してやったほうがいいよね。  
