--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -269,7 +269,7 @@ IPアドレスに関してはクラス分けとプライベートの範囲さえ
 〆・staticについてもまとめたい。
 →とりあえずざっくりとしたイメージだけはつかんだ
 〆・interfaceのnewは前にまとめたのか調べたい。
-→やってた。東さんが不思議がっていたということは基礎ができていない部分があるということか。
+→やってた。azmさんが不思議がっていたということは基礎ができていない部分があるということか。
 
 〆・シングルトン
 〆・javaジェネリック
