--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -21,8 +21,8 @@ PCに周辺機器や拡張カード等を接続した際にハードウェアと
 
 ## ボリュームライセンス
 
-福田さんのパソコンにウィルスバスターが入ってないとかで、インストールしたいけどその場合、富田さんに言わないと無理でしょってなって、  
-ライセンスで管理してるから尚更富田さんでしょってなった時に福田さんが発した。  
+fkdさんのパソコンにウィルスバスターが入ってないとかで、インストールしたいけどその場合、tさんに言わないと無理でしょってなって、  
+ライセンスで管理してるから尚更tさんでしょってなった時にfkdさんが発した。  
 まとめて買えばお得、って販売形態だと思ってたが、具体的に知らなかったのでまとめ。  
 
 ``` txt : 一番上の説明
@@ -39,7 +39,7 @@ PCに周辺機器や拡張カード等を接続した際にハードウェアと
 
 ## システムドライブ
 
-Azさんが「システムドライブにSATAを使うのはどうなんだ？」みたいなこと言ってたのでまとめ。  
+azmさんが「システムドライブにSATAを使うのはどうなんだ？」みたいなこと言ってたのでまとめ。  
 
 ``` txt : 一番上に出てくる説明<http://koyocha.blog.fc2.com/blog-entry-29.html>
 オペレーティングシステムがインストールされているハードディスクドライブのこと。
@@ -823,7 +823,7 @@ wiki
 [.NET 6とVSCodeでデスクトップアプリ（ランチャー）](https://qiita.com/Kosen-amai/items/61e6b03b8e0fccc35ee5)
 [分岐アンチパターン](https://qiita.com/pakkun/items/9bef9132f168ba0befd7)  
 
-居林さんが文字列の圧縮を実現させた。  
+ibさんが文字列の圧縮を実現させた。  
 どういうことしたのか気になる。  
 似たようなことができないだろうか。  
 [PHP（サーバー）と C#（クライアント）で圧縮した文字列のやりとりをする](https://www.create-forever.games/php-csharp-gzip-encode-decode/)  
@@ -852,8 +852,6 @@ gc.collect
 
 条件を絞ってからJoin Joinしてから条件を絞る
 [](https://atmarkit.itmedia.co.jp/bbs/phpBB/viewtopic.php?topic=32176&forum=26)  
-lru cache implementation c#
-[Fast, Short And Clean O1 LRU Cache Algorithm Implementation In C#](https://www.c-sharpcorner.com/article/fast-and-clean-o1-lru-cache-implementation/)  
 
 最初の実行から条件が駄目なので実行はされない。
 
@@ -862,43 +860,3 @@ for (int i = 1 ; i < 0 ; i++) {
     _ = 1;
 }
 ```
-
-メガネがないと目が疲れる。
-仕事に支障が出るレベルだな。
-まさかナチュラルに忘れるとは。
-
-まだまだ基礎がおろそか。
-
-決定的な何かがないからまだ決断できない。
-ただ、できることはやっていこう。
-本番の情報を使ってしまっているのに躊躇している。
-新しくブランチを切りなおして、整理したほうがいいだろう。
-俺のメインブランチはこれしかないからな。
-それくらいの苦労だったらいくらでもやってやる。
-
-ずっとここにいるつもりはない。それは確かだ。
-やりたいことなんてないからできることから探すしかなかろう。
-相手だって、それくらいのことはわかるはずだ。
-
-てか、そもそも俺の居場所なんてここにないでしょ。
-6年目になる前にいなくなるって決めたのは自分だぞ。
-何をいまさら。
-不安要素をピックアップしてそれをつぶして動いていくしかあるまい。
-そうやって一つずつ進むしかない。
-
-
-目の前にわからないことが転がっている状況で活動したくないと思っている可能性。
-だってわからないことがあるんだからね。
-で、目の前の疑問を解決する作業が楽しすぎる。
-転職活動したら確実にできなくなると思っているので、躊躇しているのかもしれない。
-
-プライベートリポジトリを見せることができるのか？
-パブリックに公開できるようにする。
-○○さんをすべてイニシャルに書き換える。
-新しくtilを作る。目的は整備。
-
-
-ようやっと考えを先に進めることができたかもしれない。
-やっぱり、ある程度のきっかけは欲しいね。
-自分で用意できれば最強だけど、自分でできないときは、他人に手伝ってもらうのも一つの手であり、問題解決の手段としては優秀である。
-
