・enum ・document ・整理

--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -15,8 +15,6 @@
 <https://twitter.com/ito_yusaku/status/1488421143426248708>
 >優秀なエンジニアなら、知らんことは正直に「知らないです」って答えるよ。  
 
-[GitHubの機能をフルに使って職務経歴書の継続的インテグレーションを実現する](https://zenn.dev/ryo_kawamata/articles/resume-on-github)  
-
 [「Visual Studio」の中の人が作ったプログラマー向け十徳ナイフ「DevToys」](https://forest.watch.impress.co.jp/docs/news/1382919.html)  
 <https://twitter.com/_inductor_/status/1485571312383049731?t=HneO12g8gQeElaHUCh2Wkg&s=09>  
 
@@ -47,6 +45,14 @@
 [IT資格試験『合格のコツ』と『取組みポイント』　～40超の資格取得経験から～](https://qiita.com/ksj555/items/6ff5598c1429c0bc190a)  
 
 [海外で働くのにも役立つ？ 資格「情報処理技術者」のメリット3つ](https://article.yahoo.co.jp/detail/d76b9877ba6933d06779ba8ae158d93c201b8579)  
+
+---
+
+## 転職系
+
+[GitHubの機能をフルに使って職務経歴書の継続的インテグレーションを実現する](https://zenn.dev/ryo_kawamata/articles/resume-on-github)  
+
+[高卒30代未経験からモダン・フロントエンドエンジニアになった軌跡を全て書いていく](https://qiita.com/Yametaro/items/46aea37f10c7bec35df8)  
 
 ---
 
