--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -814,6 +814,25 @@ wiki
 
 ---
 
+## .doc ファイルを開く方法
+
+Googleドキュメントから開ける  
+
+[Office／Wordを使わずにWord書類を開く方法](https://genki-wifi.net/word_doc)  
+
+1. Googleドキュメントを開く<https://docs.google.com/document/u/0/>  
+2. 新しいドキュメントを作成  
+3. ファイル→開く  
+4. アップロードをクリック  
+5. ローカルにある開きたい.docをドラッグする  
+
+Googleドキュメントでファイルを書き出す方法  
+
+1. ファイル→ダウンロード  
+2. 書き出したい形式を選択  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
