--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -833,6 +833,28 @@ Googleドキュメントでファイルを書き出す方法
 
 ---
 
+## 主キーはなくても動く
+
+もちろん重複したデータをいれることができる。  
+現実的ではないが、主キーを設定することがあまりにも当たり前すぎて、主キーなしという状態が許可されるのか分からなかったので確かめた。  
+
+``` sql
+CREATE TABLE [IDENTITY_INSERT_TEST_TBL]  
+(
+    [Id] INT NOT NULL,  
+    [Code] INT NOT NULL,
+    [Name] nvarchar(255)
+);
+
+-- 重複レコードが余裕で入る
+INSERT INTO [IDENTITY_INSERT_TEST_TBL] ([id],[Code],[Name]) 
+VALUES(1,1,'A'),(1,2,'B'),(1,3,'C'),(1,1,'A'),(1,2,'B'),(1,3,'C');
+
+select * from [IDENTITY_INSERT_TEST_TBL]
+```
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -868,6 +890,11 @@ gc.collect
 [C#における値と参照](https://qiita.com/Tokeiya/items/365b3c5b613868f4c928)  
 
 [ストップforeach！LINQで集合/結合する](https://qiita.com/i-tanaka730/items/3e6b560e80f1395ae8ea)  
+
+[[WPF] IDataErrorInfoとValidation.ErrorTemplateを利用してエラーを表示する](https://www.pine4.net/Memo/Article/Archives/427)  
+[MVC モデルのバリデーションについて](https://teratail.com/questions/80391)  
+>条件によってこのアノテーションを無効にしたり有効にしたりする方法はありますでしょうか？(Dだけは必ず有効）
+FLGというプロパティがあるとして、その値が1の時はRequiredを有効0の時は無効みたいな事が出来ればいいと思っています。
 
 条件を絞ってからJoin Joinしてから条件を絞る
 [](https://atmarkit.itmedia.co.jp/bbs/phpBB/viewtopic.php?topic=32176&forum=26)  
