--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -833,6 +833,22 @@ Googleドキュメントでファイルを書き出す方法
 
 ---
 
+## Validation
+
+``` C#
+                ErrorsContainer.SetErrors(
+                    nameof(FixedPlayerSetting.CustomerCD),
+                    new List<string>() { "aaaaa" }
+                );
+                FixedPlayerSetting.ErrorsContainer.SetErrors(
+                    nameof(FixedPlayerSetting.CustomerCD),
+                    new List<string>() { "aaaaa" }
+                );
+                OnErrorsChanged(nameof(FixedPlayerSetting.CustomerCD));
+```
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
