--- a/VSCode/マーケットプレイスに繋がらない問題.md
+++ b/VSCode/マーケットプレイスに繋がらない問題.md
@@ -5,54 +5,6 @@
 なんかjsonの設定を書き換えればいけるとか書いてある。  
 `C:\Program Files\Microsoft VS Code\product.json`  
 
-職場のproduct.json  
-
-```json:
-    "extensionAllowedProposedApi": [
-        "GitHub.codespaces",
-        "GitHub.vscode-pull-request-github-insiders",
-        "GitHub.vscode-pull-request-github",
-        "Microsoft.vscode-nmake-tools",
-        "ms-ai-tools.notebook-renderers",
-        "ms-dotnettools.dotnet-interactive-vscode",
-        "ms-python.gather",
-        "ms-python.python",
-        "ms-toolsai.vscode-ai",
-        "ms-vscode-remote.remote-containers-nightly",
-        "ms-vscode-remote.remote-containers",
-        "ms-vscode-remote.remote-ssh-edit-nightly",
-        "ms-vscode-remote.remote-ssh-edit",
-        "ms-vscode-remote.remote-ssh-nightly",
-        "ms-vscode-remote.remote-ssh",
-        "ms-vscode-remote.remote-wsl-nightly",
-        "ms-vscode-remote.remote-wsl",
-        "ms-vscode-remote.vscode-remote-extensionpack-nightly",
-        "ms-vscode-remote.vscode-remote-extensionpack",
-        "ms-vscode.azure-account",
-        "ms-vscode.azure-sphere-tools-ui",
-        "ms-vscode.azure-sphere-tools",
-        "ms-vscode.github-browser",
-        "ms-vscode.github-richnav",
-        "ms-vscode.js-debug-nightly",
-        "ms-vscode.js-debug",
-        "ms-vscode.lsif-browser",
-        "ms-vscode.references-view",
-        "ms-vscode.vscode-js-profile-flame",
-        "ms-vscode.vscode-js-profile-table",
-        "ms-vsliveshare.cloudenv-explorer",
-        "ms-vsliveshare.cloudenv",
-        "ms-vsliveshare.vsliveshare",
-        "ms-vsonline.vsonline"
-    ],
-    "extensionsGallery": {
-        "serviceUrl": "https://marketplace.visualstudio.com/_apis/public/gallery",
-        "cacheUrl": "https://vscode.blob.core.windows.net/gallery/index",
-        "itemUrl": "https://marketplace.visualstudio.com/items",
-        "controlUrl": "https://az764295.vo.msecnd.net/extensions/marketplace.json",
-        "recommendationsUrl": "https://az764295.vo.msecnd.net/extensions/workspaceRecommendations.json.gz"
-    },
-```
-
 ---
 
 ## 特定のポートを解放することで何とかならないかやってみた
@@ -68,8 +20,7 @@
 
 ### 閃き
 
-現状の環境でVSCodeの拡張利用がうまくいかないなら、Dockerで適当にサーバーを立ち上げて、  
-そこでVSCodeの拡張を確認してみたらどうなるか？という案。  
+現状の環境でVSCodeの拡張利用がうまくいかないなら、Dockerで適当にサーバーを立ち上げて、そこでVSCodeの拡張を確認してみたらどうなるか？という案。  
 この検証をすることによって、ホスト側の環境が悪いのか、そもそもネットワークが悪いのかを確認することができる。  
 それでもだめならパソコンが悪いとしか言いようがない。  
 
