整理・疑問追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -695,6 +695,17 @@ var results = conn.Query(sql, new { ids = new[] { 1, 2, 3, 4, 5 }});
 
 ---
 
+## Dapper boolの受け取り
+
+SELECTで `1 AS [Flag]` とか `0 AS [Flag]` と定義して、タプルとかでboolのつもりで受けようとしても取得できない事例に遭遇。  
+0件になってしまう。  
+intと解釈される模様。  
+`CONVERT(BIT,'TRUE') AS [Flag]` みたいにしてあげないと取得できないことを知った。  
+
+[SQLServerでboolean型（True/Falseの真偽値）を扱うbit型](https://johobase.com/sqlserver-boolean-bit/)  
+
+---
+
 ## 文字列結合した結果でJOIN
 
 [【SQL】JOIN(結合)でLIKEを使ってSELECTをしてみる](https://buralog.jp/sql-join-like-operator/)  
@@ -877,6 +888,14 @@ Decimal  | 10進型             | 16バイト | 28桁     | -7.92281625142643375
 
 [大学の講義で教えるために、浮動小数点数 (float 型) の仕組みを学べるアプリを Siv3D で作りました。](https://twitter.com/Reputeless/status/1542160459658416129)
 [浮動小数点数 (float 型) の仕組みを学べるアプリ](https://siv3d.jp/web/sample/IEEE754Float32/IEEE754Float32.html)  
+
+---
+
+## モジュールはクラスの代替になるのか？
+
+[第7回 VBのモジュールはオブジェクト指向に不要？](https://atmarkit.itmedia.co.jp/fdotnet/vbcheer/vbcheer07/vbcheer07.html)  
+
+この記事面白いです。
 
 ---
 
