--- a/Programming/問題/じゃんけんプログラム.md
+++ b/Programming/問題/じゃんけんプログラム.md
@@ -1,5 +1,13 @@
 # じゃんけんプログラム
 
+なぜあなたはJavaでオブジェクト指向開発ができないのか？のサンプル。  
+コーディング試験対策として標準入力からのじゃんけんプログラムを作成する課題をやりたかったので、これを参考にした。  
+
+自分が一番最初に作った形は、どちらかというと構造化プログラムみたいな形だった。  
+思っているほどオブジェクト指向的なプログラミングができていないことが分かった。  
+サンプルを頼りに実装していったら、最終的に細かいオブジェクトへの分割とインターフェースによる戦略の分割によって標準入力にまで対応できるようになった。  
+これには目から鱗であった。  
+
 ## 共通域の定義
 
 ``` C# : HandEnum
@@ -24,6 +32,11 @@
 ```
 
 ## 構造化プログラミング版
+
+1つのクラス(モジュール)の中で完結した形。  
+他のオブジェクトと連携するのではなく、内部の変数と関数だけで完結している。  
+VB6でも組めるような感じがする。  
+自分が一番最初に考えた形であり、機能を実現するだけならこれで十分だが、プレーヤーの名前を変えられないとか、プレーヤーを増やせないとか、拡張性がなさ過ぎて実務では使えないし、世の中から評価もされないだろう。  
 
 ``` C#
 using System;
@@ -124,6 +137,10 @@ namespace janken
 ---
 
 ## オブジェクト指向プログラミング版
+
+じゃんけんは判定する人と手を出す人に分けることができるので、それぞれをクラスとして抽出して実装した形。  
+最低限のオブジェクト指向の実現と行ったところ。  
+最低でもここまで考えられるようにしたいところ。  
 
 ``` C#
 using System;
@@ -300,6 +317,11 @@ namespace janken
 
 ## オブジェクト指向 + 戦略の切り出し
 
+ずっとグーを出すとか、バランスよく出すといった、戦略をインターフェースとして切り出したサンプル。  
+何気にいいDIサンプルでもある。  
+当初の目標である標準入力もクリアできる。  
+これこそオブジェクト指向と行った感じである。  
+
 ``` C#
 using System;
 using System.Linq;
@@ -419,7 +441,6 @@ namespace janken
         {
             public string Name { get; private set; }
             public int WinCount { get; private set; } = 0;
-
             private readonly ITactics tactics;
 
             /// <summary>
@@ -537,6 +558,11 @@ namespace janken
 ---
 
 ## 標準入力からのじゃんけん
+
+オブジェクト指向の基本形ができた後に組んで見たやつ。  
+今見ると、がっつりクラスの中を書き換えており、標準入力以外では使えない形になってしまっている。  
+戦略自体をインターフェースを切り出せるサンプルをやった後だと、この組み方でさえいまいちに感じる。  
+SOLID原則の一つである、クラスの中身自体を書き換えてはならない原則に反しているので、これはオブジェクト指向のアンチパターンと言えるだろう。  
 
 ``` C#
 using System;
