・輻輳 ・MVVM ・整理

--- a/Programming/問題/じゃんけんプログラム.md
+++ b/Programming/問題/じゃんけんプログラム.md
@@ -8,6 +8,24 @@
 サンプルを頼りに実装していったら、最終的に細かいオブジェクトへの分割とインターフェースによる戦略の分割によって標準入力にまで対応できるようになった。  
 これには目から鱗であった。  
 
+---
+
+## メモ
+
+じゃんけんプログラム
+判定部分、手は数字で定義して、その大小関係で判断する？
+大小だ。大きいほうが勝ち、となるかな。
+後はランダム関数を実行して、それを整数に変換してだな。
+
+俺がやっているのは構造化プログラムのほうだったか。
+でも、いい機会だからこれを機に構造化プログラムとオブジェクト指向プログラミングの違いを確認しようではないか。
+てか、そう考えると業務もほとんどこの考え方でしかやってないってことだよなぁ。
+うーん。
+あぁ、そうか。
+俺が知りたかったのは、オブジェクト指向が抽象だのなんだのって事じゃなくて、こういうマクロ的な例題だったんだ。
+
+---
+
 ## 共通域の定義
 
 ``` C# : HandEnum
@@ -30,6 +48,8 @@
         };
     }
 ```
+
+---
 
 ## 構造化プログラミング版
 
