--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -729,6 +729,23 @@ Decimal  | 10進型             | 16バイト | 28桁     | -7.92281625142643375
 
 ---
 
+## 輻輳(ふくそう)
+
+輻輳とは、さまざまな物が1箇所に集中する状態を指します。  
+通信分野では、インターネット回線や電話回線にアクセスが集中することを輻輳と呼びます。  
+
+インターネット回線や電話回線で輻輳が発生すると、通信速度が低下する、あるいは通信システムそのものがダウンするといった弊害が生じます。  
+
+たとえば電話回線の場合、コンサートチケットの予約開始などで特定の電話番号にアクセスが集中することで輻輳が発生し、つながりにくい状態になることがあります。  
+また特定の電話番号宛でなくても、たとえば災害発生時の安否確認などによって電話回線が混雑し、輻輳が発生することがあります。  
+
+インターネット回線においても、一時的に大量のトラフィック（一定時間内に転送されるデータ量）が発生すると輻輳が発生し、通信速度の低下や、サービスへの接続が不可能になるといった事態が発生します。  
+動画配信サービスや動画共有サービスの普及、クラウドサービスの浸透などがインターネット回線における輻輳の原因として挙げられています。  
+
+[意外と知らない？ITトレンド用語](https://www.ntt.com/bizon/glossary/j-h/fukuso.html)  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
@@ -764,6 +781,8 @@ gc.collect
 [C#における値と参照](https://qiita.com/Tokeiya/items/365b3c5b613868f4c928)  
 
 [ストップforeach！LINQで集合/結合する](https://qiita.com/i-tanaka730/items/3e6b560e80f1395ae8ea)  
+
+[RESTとGraphQLについて](https://www.utakata.work/entry/2019/12/02/000000)
 
 条件を絞ってからJoin Joinしてから条件を絞る
 [](https://atmarkit.itmedia.co.jp/bbs/phpBB/viewtopic.php?topic=32176&forum=26)  
