・整理 ・tupleのnull判定 ・wsdl

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -746,6 +746,16 @@ Decimal  | 10進型             | 16バイト | 28桁     | -7.92281625142643375
 
 ---
 
+## WSDL (Web Services Description Language)
+
+- 「Web Services Description Language」の略で、Webサービス＝WebAPIの仕様を記述するためのデータ形式のこと。SOAPと同時によく利用されるらしい。  
+- WSDLはXMLで記述されており、あるWebAPIがどんなメソッドを公開しているのか、アクセスすべきURIはどこか、渡すべきパラメータは何か、戻り値は何か、利用すべき名前空間は何か、といったことが記述されている。  
+- WSDLを読み込むことで、リクエストデータを自分で生成しなくても、どのメソッドを呼び出して、どのパラメータに何を渡すかを指定すれば、自動的にリクエストデータを生成してAPIを利用できるようになるという便利なモノ。  
+
+[「SOAP」「WSDL」って何？](https://qiita.com/shibuchaaaan/items/0b8005310a13c641d089)  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
