--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -756,6 +756,57 @@ Decimal  | 10進型             | 16バイト | 28桁     | -7.92281625142643375
 
 ---
 
+wpf livet 使い方
+
+<https://hakase0274.hatenablog.com/entry/2021/01/31/200000>  
+
+---
+
+## JOIN条件にBETWEEN使える
+
+JOIN ID BETWEEN FROM AND TO
+
+``` sql
+SELECT
+    CASE
+        WHEN [TableB].[PrimaryKey] IS NOT NULL THEN 2
+        WHEN [nanka].[nanka] IS NOT NULL THEN 1
+        ELSE 0
+    END
+FROM [TableA]
+LEFT JOIN [TableB]
+ON [TableA].[Number] BETWEEN [TableB].[NumberFrom] AND [TableB].[NumberTo]
+```
+
+---
+
+テーブル構造を吐き出すクエリ
+
+``` sql <https://kojimanotech.com/2020/09/13/252/>
+EXEC sp_columns @table_name = 'TFr_AccountNo';
+```
+
+``` sql <https://lightgauge.net/database/sqlserver/3697/>
+SELECT
+     tbls.name AS table_name
+    ,key_const.name AS constraint_name
+    ,idx_cols.key_ordinal AS key_ordinal
+    ,cols.name AS col_name
+FROM
+    sys.tables AS tbls
+        INNER JOIN sys.key_constraints AS key_const ON
+            tbls.object_id = key_const.parent_object_id AND key_const.type = 'PK'
+            AND tbls.name = 'TFr_AccountNo'
+        INNER JOIN sys.index_columns AS idx_cols ON
+            key_const.parent_object_id = idx_cols.object_id
+            AND key_const.unique_index_id  = idx_cols.index_id
+        INNER JOIN sys.columns AS cols ON
+            idx_cols.object_id = cols.object_id
+            AND idx_cols.column_id = cols.column_id
+```
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
