ここまでの変更を確定

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -884,7 +884,7 @@ private async void Initialize()
 
 <https://docs.microsoft.com/ja-jp/dotnet/csharp/programming-guide/concepts/async/>  
 
-RN3で非同期メソッドを並列処理できそうな箇所があったので、ECOでやったような,Task.WaitAllみたいな並列処理をAsyncAwaitでも実現できないか調べてみた。  
+非同期メソッドを並列処理できそうな箇所があったので、Task.WaitAllみたいな並列処理をAsyncAwaitでも実現できないか調べてみた。  
 天下のマイクロソフトに完璧なサンプルがあったのでそれを拝借する。  
 因みに実現できたのだが、そうしたら非同期中のクルクルがなくなってしまったのでやめた。  
 
