--- a/Other/業務用語など.md
+++ b/Other/業務用語など.md
@@ -118,7 +118,7 @@ fkdさん曰く
 でも50%、遊びに使ってしまった。  
 そしたら50%分を割り返して、その分の税金を収めるみたいな感じで使うらしい。  
 
-RN3に置ける按分は全体の金額で消費税を求めたときと、プレーヤー毎に消費税を求めて合算した場合の差額の伝票を代表者に差し込むことをいうらしい。  
+仕事における按分は全体の金額で消費税を求めたときと、プレーヤー毎に消費税を求めて合算した場合の差額の伝票を代表者に差し込むことをいうらしい。  
 全然割り返しの概念に即していないことを按分と読んでいる模様。  
 
 例)  
