--- a/Vue.js/概要・開発環境構築について.md
+++ b/Vue.js/概要・開発環境構築について.md
@@ -88,7 +88,7 @@ SETコマンドで適当な環境変数作っても意味がない。
 ユーザーの環境設定を設定するだけで反映されたりするの？
 →反映されることが分かった。
 
-`npm install -g @vue/cli`でグローバルインストールした場合、DotNetDev4ではC:\Users\s.ito\AppData\Roaming\npmにインストールされる。
+`npm install -g @vue/cli`でグローバルインストールした場合、C:\Users\ユーザー名\AppData\Roaming\npmにインストールされる。
 
 [【Node.js】 Windows上で動作させるための設定知識](https://note.affi-sapo-sv.com/nodejs-windows-setting-knowledge.php)  
 
