ここまでの整理を確定

--- a/License/AppliedInformation/午後/H31S.md
+++ b/License/AppliedInformation/午後/H31S.md
@@ -328,7 +328,7 @@ pm07_7.gif/image-size:455×65
 間違えたところもpxの付け忘れとか、imagesとimageの違いとか、よく確認せずに書いた事なので、これはスルーしてくれ。  
 長文等も全部正解したし、悩むことも無かったので特に解説もいらない。  
 一番最初のスクリーンサイズ毎に切り替える手法が思いつかなかったけど、突然「レスポンシブデザイン」という言葉を思い出した。  
-teela開発でやったはずだったので、それのたわものだなと思った。  
+Web案件のたわものだなと思った。  
 
 ``` txt 17分 : 7/10 実質100点
 レスポンシブデザイン
