--- a/PHP/配列関係.md
+++ b/PHP/配列関係.md
@@ -207,7 +207,7 @@ getOpenPlanPrice(...array_values(rebateMainKeyFromLinkagePlanID($linkage_plan_id
 
 ## array_null
 
-多分Teelaやり始めたあたりで、連想配列のIndexにNullを指定したらどうなるかわからなかったので、試してみた内容だと思う。  
+多分、web案件やり始めたあたりで、連想配列のIndexにNullを指定したらどうなるかわからなかったので、試してみた内容だと思う。  
 まぁ、普通にnullになるわなって感じ。  
 
 ``` php
