ここまでの整理を確定

--- a/DB・SQL/SQLServer/縦横・横縦変換.md
+++ b/DB・SQL/SQLServer/縦横・横縦変換.md
@@ -4,43 +4,96 @@
 
 ## ヨコタテ変換 : CROSS APPLY
 
-[複数列のデータを縦に並べる方法【SQLServer】](https://qiita.com/sugarboooy/items/0750d0ccb83a2af4dc0e)
+[複数列のデータを縦に並べる方法【SQLServer】](https://qiita.com/sugarboooy/items/0750d0ccb83a2af4dc0e)  
 `たて→よこ`ではない。`よこ→たて`である。  
 
 似たような物にUNPIVOTがあるが、あちらは複数行に対応できないので、こちらを推奨された。  
 たぶんSQL Server独自の関数だと思われるが、とても便利な物があるものだ。  
-使い方はサンプルを見れば大体わかる。  
 
-2022/03/10 追記  
-横持ちから縦持ちへの変換は、union all を使うことでも実現できるらしい。  
+``` txt : [Src]を[Dest]の形に変換する
+[SrcTable]
+CD    RANK1  PRICE1  RANK2  PRICE2  RANK2  PRICE3
+1     A      100     B      200     C      300
+2     A      120     B      220     C      320
+3     A      130     B      230     C      330
 
-``` SQL : 実際に業務で使用したSQL
+[DestTable]
+CD  RANK  PRICE
+1   A     100
+1   B     200
+1   C     300
+2   A     120
+2   B     220
+2   C     320
+3   A     130
+3   B     230
+3   C     330
+```
+
+``` SQL
 SELECT
-    CONCAT('AAA', CONVERT(nvarchar,[TU_売掛残高].[営業日], 112), [v].[SlipNumber]) AS [SettlementID],
-    [v].[Seq],
-    (SELECT TOP 1 OfficeCD FROM [Round3Dat].[dbo].[TMa_CompanyBasicInfo]) AS [OfficeCD],
-    [v].[PaymentDay],
-    [v].[DepositAmount],
-    [v].[AdjustmentAmount],
-    [v].[PaymentCD],
-    [v].[AccountCD]
+    [CD],[v].[CD],[v].[RANK],[v].[PRICE]
 FROM
-    [RoundDatMigrationSource].[dbo].[TU_売掛残高]
+    [SrcTable]
 CROSS APPLY(
-    VALUES
-        (伝票番号, 1, 入金日1, 入金額1, 調整額1, 入金CD1, 口座CD1),
-        (伝票番号, 2, 入金日2, 入金額2, 調整額2, 入金CD2, 口座CD2),
-        (伝票番号, 3, 入金日3, 入金額3, 調整額3, 入金CD3, 口座CD3),
-        (伝票番号, 4, 入金日4, 入金額4, 調整額4, 入金CD4, 口座CD4),
-        (伝票番号, 5, 入金日5, 入金額5, 調整額5, 入金CD5, 口座CD5)
-) AS [v] ([SlipNumber], [Seq], [PaymentDay], [DepositAmount], [AdjustmentAmount], [PaymentCD], [AccountCD])
-WHERE
-    [v].[DepositAmount] <> 0
+    values 
+        (1 ,RANK1 ,PRICE1),
+        (2 ,RANK2 ,PRICE2),
+        (3 ,RANK3 ,PRICE3)
+) AS [v] ([CD],[RANK],[PRICE])
+-- WHERE も可能
 ```
 
 ---
 
-## タテヨコ変換
+## ヨコタテ変換 : UNION ALL
+
+2022/03/10 追記  
+横持ちから縦持ちへの変換は、union all を使うことでも実現できるらしい。  
+
+[横持ちデータを縦持ちへ変換するSQL](https://obenkyolab.com/?p=1481)  
+
+``` sql
+select [CD],[RANK1] AS [RANK],[PRICE1] AS [PRICE]
+from [SrcTable]
+where [CD] = 1
+union all
+select [CD],[RANK2] AS [RANK],[PRICE2] AS [PRICE]
+from [SrcTable]
+where [CD] = 1
+union all
+select [CD],[RANK3] AS [RANK],[PRICE3] AS [PRICE]
+from [SrcTable]
+where [CD] = 1
+union all
+select [CD],[RANK1] AS [RANK],[PRICE1] AS [PRICE]
+from [SrcTable]
+where [CD] = 2
+union all
+select [CD],[RANK2] AS [RANK],[PRICE2] AS [PRICE]
+from [SrcTable]
+where [CD] = 2
+union all
+select [CD],[RANK3] AS [RANK],[PRICE3] AS [PRICE]
+from [SrcTable]
+where [CD] = 2
+union all
+select [CD],[RANK1] AS [RANK],[PRICE1] AS [PRICE]
+from [SrcTable]
+where [CD] = 3
+union all
+select [CD],[RANK2] AS [RANK],[PRICE2] AS [PRICE]
+from [SrcTable]
+where [CD] = 3
+union all
+select [CD],[RANK3] AS [RANK],[PRICE3] AS [PRICE]
+from [SrcTable]
+where [CD] = 3
+```
+
+---
+
+## タテ・ヨコ変換
 
 PIVOT関数ってSQL SERVERだけなのね。  
 タテヨコのメジャーな方法はMAX CASE WHEN使うパターンみたい。  
@@ -58,13 +111,13 @@ Select
   ,max( CASE WHEN 連番=3 THEN 担当 END )
   ,max( CASE WHEN 連番=4 THEN 担当 END )
   ,max( CASE WHEN 連番=5 THEN 担当 END )
-From 1のデータ
+From テーブル名
 Group By グループ
 ```
 
 ``` sql : 縦横変換途中サンプル
 SELECT
-    [CustomerCD],
+    [TestCode],
     (CASE WHEN [AA].[ItemCD] = '111' THEN [AA].[Number] ELSE NULL END) AS [数値0],
     (CASE WHEN [AA].[ItemCD] = '112' THEN [AA].[Number] ELSE NULL END) AS [数値1],
     (CASE WHEN [AA].[ItemCD] = '113' THEN [AA].[Number] ELSE NULL END) AS [数値2],
@@ -75,13 +128,13 @@ SELECT
     (CASE WHEN [AA].[ItemCD] = '118' THEN [AA].[Number] ELSE NULL END) AS [数値7],
     (CASE WHEN [AA].[ItemCD] = '119' THEN [AA].[Number] ELSE NULL END) AS [数値8],
     (CASE WHEN [AA].[ItemCD] = '120' THEN [AA].[Number] ELSE NULL END) AS [数値9]
-FROM [CustomerGenericInfoContent] AS [AA]
-WHERE [CustomerCD] = '000000025'
+FROM [テーブル名] AS [AA]
+WHERE [TestCode] = '000000025'
 
 -- 上記クエリを実行した結果は下記のようになる。
 -- これを顧客でGROUP BYしてMAXを取れば、1行に集約できるというわけ
 
--- CustomerCD      数値0   数値1   数値2   数値3   数値4   数値5   数値6   数値7   数値8   数値9
+-- TestCode     数値0   数値1   数値2   数値3   数値4   数値5   数値6   数値7   数値8   数値9
 -- 000000025    0.00    NULL    NULL    NULL    NULL    NULL    NULL    NULL    NULL    NULL
 -- 000000025    NULL    0.00    NULL    NULL    NULL    NULL    NULL    NULL    NULL    NULL
 -- 000000025    NULL    NULL    0.00    NULL    NULL    NULL    NULL    NULL    NULL    NULL
