--- a/License/AppliedInformation/応用情報令和元年秋期反省.md
+++ b/License/AppliedInformation/応用情報令和元年秋期反省.md
@@ -1,32 +1,7 @@
-# 応用情報令和元年春季反省
+# 応用情報令和元年秋季反省
 
 午前:68.75点
 午後:57点
 
 落ちました。
 3点足りなかったです。
-たった3点。
-悔やんでも悔やみきれません。
-
-ここ最近は調子よくこれていたからこのショックは大きい。
-このくやしさを筋トレに向けるかしばらく落ち込むか。
-
-３か月の我慢。
-これ以降受けたくなかったから。
-落ちた。今までの苦労がすべて水の泡。
-
-流石にいてもたってもいられなくなったので昼休みには散歩しました。
-声を出して感情を表しました。
-
-受かること前提でイメージしてたからその分のダメージも大きかった。
-楽観主義ではなく、ただの願望だった。
-
-原因は？
-・結局、基礎が甘かったのでは？十分に理解していなかったから。
-・本番環境で試験問題に取り組むのが遅かった。
-・データベースの問題のミスが多かったと感じる。
-・11章に手を出したのが間違いだった。
-・午前8割できていない地点で午後も心配だった。
-
-３か月の勉強で合格手前まで行けたのは評価できるところではないでしょうか。
-今なら自分のペースで再び理解に徹することもできるのでは？
