相対パス化

--- a/C#/データベース接続サンプル.md
+++ b/C#/データベース接続サンプル.md
@@ -134,7 +134,7 @@ private void Execute()
         Console.WriteLine("---");
 
         // 接続文字列の構築
-        string constr = @"Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\rendy\Desktop\CSharpSample1\CSharpSample1\LocalDB\SampleDatabase.mdf;Integrated Security=True";
+        string constr = @"LocalDBを右クリックしてプロパティから接続文字列を取得して貼り付け";
         // 接続オブジェクト生成
         using SqlConnection connection = new SqlConnection(constr);
 
@@ -337,7 +337,7 @@ private void Execute()
     SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
     {
         DataSource = @"(LocalDB)\MSSQLLocalDB",
-        AttachDBFilename = @"C:\Users\~~~~~\LocalDB\SampleDatabase.mdf",
+        AttachDBFilename = System.IO.Path.GetFullPath(@"..\..\..\SampleDatabase.mdf"),
         IntegratedSecurity = true,
     };
     SqlConnection connection = new SqlConnection(builder.ConnectionString);
@@ -346,5 +346,6 @@ private void Execute()
 ``` C# : ローカルDBへの接続文字列の構築 直接指定パターン
     //Data Source=(SQL Server のホスト名またはIPアドレス);Initial Catalog=(接続先データベース名);Connect Timeout=60;Persist Security Info=True;User ID=(SQL Serverに接続するユーザーID);Password=(ユーザーのパスワード)
     string constr = @"Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\~~~~~\LocalDB\SampleDatabase.mdf;Integrated Security=True";
+    // string constr = $@"Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename={System.IO.Path.GetFullPath(@"..\..\..\Database1.mdf")};Integrated Security=True";
     SqlConnection con = new SqlConnection(constr);
 ```
